PreEntrega2 Santiago-Ibarra

--- a/GM Tienda/index.html
+++ b/GM Tienda/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="../src/assets/logoGM.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienda de Samples GM</title>
+    <meta name="description" content="Tienda de venta de loops de guitarra a pedido y edición de paquetes. Encuentra los mejores samples para tus producciones musicales en Tienda de Samples GM." />
+    <meta name="tags" content=" samples, loops, guitarra, edición, paquetes, música, producción" />
+
+
   </head>
   <body>
     <div id="root"></div>
